# simple-rag-implementation

./: .gitignore  README.md  augmentation.py  augmented_data.txt  database_config.py  generation.py  ingestion.py  main.py  pyproject.toml  requirements.txt  retrieval.py
