[project]
name = "rag-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pillow>=12.2.0",
    "pypdf>=6.11.0",
    "scikit-learn>=1.8.0",
]
